silver_key_vm/nasm/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    AND
    BSS
    CALL
    CLC
    CLI
    CMP
    CMPSB
    CMPSW
    CODE
    COLON
    COMMENT
    DATA
    DB
    DD
    DEC
    DIV
    DOT
    DQ
    DW
    HLT
    IDENTIFIER
    IDIV
    IMUL
    INC
    INT
    IRET
    JE
    JG
    JL
    JMP
    JNE
    LEA
    LODSB
    LODSW
    LOOP
    MOVSB
    MOVSW
    MUL
    MULTIPLY
    NOP
    NOT
    OR
    POP
    PUSH
    RESB
    RESD
    RESQ
    RESW
    RET
    ROL
    ROR
    SCASB
    SCASW
    SECTION
    SHL
    SHR
    STC
    STI
    STOSB
    STOSW
    SUB
    TEST
    XOR

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     statement -> expression NEWLINE
Rule 4     statement -> expression
Rule 5     expression -> bits
Rule 6     expression -> mov
Rule 7     bits -> BITS NUMBER
Rule 8     registers16 -> AX
Rule 9     registers16 -> BX
Rule 10    registers16 -> CX
Rule 11    registers16 -> DX
Rule 12    registers16 -> DL
Rule 13    registers16 -> SP
Rule 14    registers16 -> BP
Rule 15    registers16 -> SI
Rule 16    registers16 -> CS
Rule 17    registers16 -> DS
Rule 18    registers16 -> SS
Rule 19    registers16 -> ES
Rule 20    registers16 -> AH
Rule 21    registers16 -> IP
Rule 22    mov -> MOV registers16 COMMA NUMBER
Rule 23    mov -> MOV registers16 COMMA registers16

Terminals, with rules where they appear

ADD                  : 
AH                   : 20
AND                  : 
AX                   : 8
BITS                 : 7
BP                   : 14
BSS                  : 
BX                   : 9
CALL                 : 
CLC                  : 
CLI                  : 
CMP                  : 
CMPSB                : 
CMPSW                : 
CODE                 : 
COLON                : 
COMMA                : 22 23
COMMENT              : 
CS                   : 16
CX                   : 10
DATA                 : 
DB                   : 
DD                   : 
DEC                  : 
DIV                  : 
DL                   : 12
DOT                  : 
DQ                   : 
DS                   : 17
DW                   : 
DX                   : 11
ES                   : 19
HLT                  : 
IDENTIFIER           : 
IDIV                 : 
IMUL                 : 
INC                  : 
INT                  : 
IP                   : 21
IRET                 : 
JE                   : 
JG                   : 
JL                   : 
JMP                  : 
JNE                  : 
LEA                  : 
LODSB                : 
LODSW                : 
LOOP                 : 
MOV                  : 22 23
MOVSB                : 
MOVSW                : 
MUL                  : 
MULTIPLY             : 
NEWLINE              : 3
NOP                  : 
NOT                  : 
NUMBER               : 7 22
OR                   : 
POP                  : 
PUSH                 : 
RESB                 : 
RESD                 : 
RESQ                 : 
RESW                 : 
RET                  : 
ROL                  : 
ROR                  : 
SCASB                : 
SCASW                : 
SECTION              : 
SHL                  : 
SHR                  : 
SI                   : 15
SP                   : 13
SS                   : 18
STC                  : 
STI                  : 
STOSB                : 
STOSW                : 
SUB                  : 
TEST                 : 
XOR                  : 
error                : 

Nonterminals, with rules where they appear

bits                 : 5
expression           : 3 4
mov                  : 6
program              : 2 0
registers16          : 22 23 23
statement            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (3) statement -> . expression NEWLINE
    (4) statement -> . expression
    (5) expression -> . bits
    (6) expression -> . mov
    (7) bits -> . BITS NUMBER
    (22) mov -> . MOV registers16 COMMA NUMBER
    (23) mov -> . MOV registers16 COMMA registers16

    BITS            shift and go to state 6
    MOV             shift and go to state 7

    program                        shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 3
    bits                           shift and go to state 4
    mov                            shift and go to state 5

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (3) statement -> . expression NEWLINE
    (4) statement -> . expression
    (5) expression -> . bits
    (6) expression -> . mov
    (7) bits -> . BITS NUMBER
    (22) mov -> . MOV registers16 COMMA NUMBER
    (23) mov -> . MOV registers16 COMMA registers16

    BITS            shift and go to state 6
    MOV             shift and go to state 7

    statement                      shift and go to state 8
    expression                     shift and go to state 3
    bits                           shift and go to state 4
    mov                            shift and go to state 5

state 2

    (1) program -> statement .

    BITS            reduce using rule 1 (program -> statement .)
    MOV             reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)


state 3

    (3) statement -> expression . NEWLINE
    (4) statement -> expression .

    NEWLINE         shift and go to state 9
    BITS            reduce using rule 4 (statement -> expression .)
    MOV             reduce using rule 4 (statement -> expression .)
    $end            reduce using rule 4 (statement -> expression .)


state 4

    (5) expression -> bits .

    NEWLINE         reduce using rule 5 (expression -> bits .)
    BITS            reduce using rule 5 (expression -> bits .)
    MOV             reduce using rule 5 (expression -> bits .)
    $end            reduce using rule 5 (expression -> bits .)


state 5

    (6) expression -> mov .

    NEWLINE         reduce using rule 6 (expression -> mov .)
    BITS            reduce using rule 6 (expression -> mov .)
    MOV             reduce using rule 6 (expression -> mov .)
    $end            reduce using rule 6 (expression -> mov .)


state 6

    (7) bits -> BITS . NUMBER

    NUMBER          shift and go to state 10


state 7

    (22) mov -> MOV . registers16 COMMA NUMBER
    (23) mov -> MOV . registers16 COMMA registers16
    (8) registers16 -> . AX
    (9) registers16 -> . BX
    (10) registers16 -> . CX
    (11) registers16 -> . DX
    (12) registers16 -> . DL
    (13) registers16 -> . SP
    (14) registers16 -> . BP
    (15) registers16 -> . SI
    (16) registers16 -> . CS
    (17) registers16 -> . DS
    (18) registers16 -> . SS
    (19) registers16 -> . ES
    (20) registers16 -> . AH
    (21) registers16 -> . IP

    AX              shift and go to state 12
    BX              shift and go to state 13
    CX              shift and go to state 14
    DX              shift and go to state 15
    DL              shift and go to state 16
    SP              shift and go to state 17
    BP              shift and go to state 18
    SI              shift and go to state 19
    CS              shift and go to state 20
    DS              shift and go to state 21
    SS              shift and go to state 22
    ES              shift and go to state 23
    AH              shift and go to state 24
    IP              shift and go to state 25

    registers16                    shift and go to state 11

state 8

    (2) program -> program statement .

    BITS            reduce using rule 2 (program -> program statement .)
    MOV             reduce using rule 2 (program -> program statement .)
    $end            reduce using rule 2 (program -> program statement .)


state 9

    (3) statement -> expression NEWLINE .

    BITS            reduce using rule 3 (statement -> expression NEWLINE .)
    MOV             reduce using rule 3 (statement -> expression NEWLINE .)
    $end            reduce using rule 3 (statement -> expression NEWLINE .)


state 10

    (7) bits -> BITS NUMBER .

    NEWLINE         reduce using rule 7 (bits -> BITS NUMBER .)
    BITS            reduce using rule 7 (bits -> BITS NUMBER .)
    MOV             reduce using rule 7 (bits -> BITS NUMBER .)
    $end            reduce using rule 7 (bits -> BITS NUMBER .)


state 11

    (22) mov -> MOV registers16 . COMMA NUMBER
    (23) mov -> MOV registers16 . COMMA registers16

    COMMA           shift and go to state 26


state 12

    (8) registers16 -> AX .

    COMMA           reduce using rule 8 (registers16 -> AX .)
    NEWLINE         reduce using rule 8 (registers16 -> AX .)
    BITS            reduce using rule 8 (registers16 -> AX .)
    MOV             reduce using rule 8 (registers16 -> AX .)
    $end            reduce using rule 8 (registers16 -> AX .)


state 13

    (9) registers16 -> BX .

    COMMA           reduce using rule 9 (registers16 -> BX .)
    NEWLINE         reduce using rule 9 (registers16 -> BX .)
    BITS            reduce using rule 9 (registers16 -> BX .)
    MOV             reduce using rule 9 (registers16 -> BX .)
    $end            reduce using rule 9 (registers16 -> BX .)


state 14

    (10) registers16 -> CX .

    COMMA           reduce using rule 10 (registers16 -> CX .)
    NEWLINE         reduce using rule 10 (registers16 -> CX .)
    BITS            reduce using rule 10 (registers16 -> CX .)
    MOV             reduce using rule 10 (registers16 -> CX .)
    $end            reduce using rule 10 (registers16 -> CX .)


state 15

    (11) registers16 -> DX .

    COMMA           reduce using rule 11 (registers16 -> DX .)
    NEWLINE         reduce using rule 11 (registers16 -> DX .)
    BITS            reduce using rule 11 (registers16 -> DX .)
    MOV             reduce using rule 11 (registers16 -> DX .)
    $end            reduce using rule 11 (registers16 -> DX .)


state 16

    (12) registers16 -> DL .

    COMMA           reduce using rule 12 (registers16 -> DL .)
    NEWLINE         reduce using rule 12 (registers16 -> DL .)
    BITS            reduce using rule 12 (registers16 -> DL .)
    MOV             reduce using rule 12 (registers16 -> DL .)
    $end            reduce using rule 12 (registers16 -> DL .)


state 17

    (13) registers16 -> SP .

    COMMA           reduce using rule 13 (registers16 -> SP .)
    NEWLINE         reduce using rule 13 (registers16 -> SP .)
    BITS            reduce using rule 13 (registers16 -> SP .)
    MOV             reduce using rule 13 (registers16 -> SP .)
    $end            reduce using rule 13 (registers16 -> SP .)


state 18

    (14) registers16 -> BP .

    COMMA           reduce using rule 14 (registers16 -> BP .)
    NEWLINE         reduce using rule 14 (registers16 -> BP .)
    BITS            reduce using rule 14 (registers16 -> BP .)
    MOV             reduce using rule 14 (registers16 -> BP .)
    $end            reduce using rule 14 (registers16 -> BP .)


state 19

    (15) registers16 -> SI .

    COMMA           reduce using rule 15 (registers16 -> SI .)
    NEWLINE         reduce using rule 15 (registers16 -> SI .)
    BITS            reduce using rule 15 (registers16 -> SI .)
    MOV             reduce using rule 15 (registers16 -> SI .)
    $end            reduce using rule 15 (registers16 -> SI .)


state 20

    (16) registers16 -> CS .

    COMMA           reduce using rule 16 (registers16 -> CS .)
    NEWLINE         reduce using rule 16 (registers16 -> CS .)
    BITS            reduce using rule 16 (registers16 -> CS .)
    MOV             reduce using rule 16 (registers16 -> CS .)
    $end            reduce using rule 16 (registers16 -> CS .)


state 21

    (17) registers16 -> DS .

    COMMA           reduce using rule 17 (registers16 -> DS .)
    NEWLINE         reduce using rule 17 (registers16 -> DS .)
    BITS            reduce using rule 17 (registers16 -> DS .)
    MOV             reduce using rule 17 (registers16 -> DS .)
    $end            reduce using rule 17 (registers16 -> DS .)


state 22

    (18) registers16 -> SS .

    COMMA           reduce using rule 18 (registers16 -> SS .)
    NEWLINE         reduce using rule 18 (registers16 -> SS .)
    BITS            reduce using rule 18 (registers16 -> SS .)
    MOV             reduce using rule 18 (registers16 -> SS .)
    $end            reduce using rule 18 (registers16 -> SS .)


state 23

    (19) registers16 -> ES .

    COMMA           reduce using rule 19 (registers16 -> ES .)
    NEWLINE         reduce using rule 19 (registers16 -> ES .)
    BITS            reduce using rule 19 (registers16 -> ES .)
    MOV             reduce using rule 19 (registers16 -> ES .)
    $end            reduce using rule 19 (registers16 -> ES .)


state 24

    (20) registers16 -> AH .

    COMMA           reduce using rule 20 (registers16 -> AH .)
    NEWLINE         reduce using rule 20 (registers16 -> AH .)
    BITS            reduce using rule 20 (registers16 -> AH .)
    MOV             reduce using rule 20 (registers16 -> AH .)
    $end            reduce using rule 20 (registers16 -> AH .)


state 25

    (21) registers16 -> IP .

    COMMA           reduce using rule 21 (registers16 -> IP .)
    NEWLINE         reduce using rule 21 (registers16 -> IP .)
    BITS            reduce using rule 21 (registers16 -> IP .)
    MOV             reduce using rule 21 (registers16 -> IP .)
    $end            reduce using rule 21 (registers16 -> IP .)


state 26

    (22) mov -> MOV registers16 COMMA . NUMBER
    (23) mov -> MOV registers16 COMMA . registers16
    (8) registers16 -> . AX
    (9) registers16 -> . BX
    (10) registers16 -> . CX
    (11) registers16 -> . DX
    (12) registers16 -> . DL
    (13) registers16 -> . SP
    (14) registers16 -> . BP
    (15) registers16 -> . SI
    (16) registers16 -> . CS
    (17) registers16 -> . DS
    (18) registers16 -> . SS
    (19) registers16 -> . ES
    (20) registers16 -> . AH
    (21) registers16 -> . IP

    NUMBER          shift and go to state 28
    AX              shift and go to state 12
    BX              shift and go to state 13
    CX              shift and go to state 14
    DX              shift and go to state 15
    DL              shift and go to state 16
    SP              shift and go to state 17
    BP              shift and go to state 18
    SI              shift and go to state 19
    CS              shift and go to state 20
    DS              shift and go to state 21
    SS              shift and go to state 22
    ES              shift and go to state 23
    AH              shift and go to state 24
    IP              shift and go to state 25

    registers16                    shift and go to state 27

state 27

    (23) mov -> MOV registers16 COMMA registers16 .

    NEWLINE         reduce using rule 23 (mov -> MOV registers16 COMMA registers16 .)
    BITS            reduce using rule 23 (mov -> MOV registers16 COMMA registers16 .)
    MOV             reduce using rule 23 (mov -> MOV registers16 COMMA registers16 .)
    $end            reduce using rule 23 (mov -> MOV registers16 COMMA registers16 .)


state 28

    (22) mov -> MOV registers16 COMMA NUMBER .

    NEWLINE         reduce using rule 22 (mov -> MOV registers16 COMMA NUMBER .)
    BITS            reduce using rule 22 (mov -> MOV registers16 COMMA NUMBER .)
    MOV             reduce using rule 22 (mov -> MOV registers16 COMMA NUMBER .)
    $end            reduce using rule 22 (mov -> MOV registers16 COMMA NUMBER .)

